meta: corrige várias inconsistências que o LS aponta